--- a/styles/MenuBar.module.css
+++ b/styles/MenuBar.module.css
@@ -1,37 +1,29 @@
 /* General styles for the menu bar */
 .menu-bar {
   position: fixed;
-  top: 15vh;
+  bottom: 5vh;
   right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: all 0.3s ease;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow on the left */
+  border: 1px solid #858585; /* Light blue border */
+  border-radius: 30px; /* Rounded corners */
 }
 
 /* Unfolded state: Fixed to the right side of the screen */
 .menu-bar.unfolded {
-  position: fixed;
-  top: 15vh;
-  right: 20px;
   height: 50vh;
-  width: 70px; /* Adjusted width to match the image */
-  background-color: #ffffff; /* White background */
   border-radius: 30px; /* Rounded corners */
-  border: 1px solid #858585; /* Light blue border */
   padding: 30px 10px 15px 10px; /* Adjusted padding */
   justify-content: space-between;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); /* Subtle shadow on the left */
+
 }
 
 /* Folded state: Fixed to the bottom-right corner */
 .menu-bar.folded {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  height: auto;
-  width: auto;
-  background-color: transparent;
+  padding: 15px 16px;
 }
 
 /* Menu items styling */
