--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,78 +3,71 @@
 
 /* Footer */
 .footer {
-  background-color: #fff5f5; /* Light beige background */
+  min-height: 12vh;
+  background-color: #333333; /* Light beige background */
+  color: #fff; /* White text */
   padding: 40px 20px;
-  text-align: center;
-}
-
-.footer-content {
-  margin-bottom: 40px;
-}
-
-.footer-title {
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.download-buttons {
   display: flex;
-  justify-content: center;
-  gap: 15px;
-}
-
-.footer-bottom {
-  display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-top: 20px;
-  border-top: 1px solid #e0e0e0;
+  align-items: end;
 }
+
 
 .footer-slogan {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: start;
   text-align: left;
+  padding-left: 20px;
 }
 
-.footer-slogan p {
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0px;
+  line-height: 0;
   font-size: 14px;
-  color: #666;
-  margin-bottom: 10px;
+  color: #fff;
+  margin-bottom: 35px;
 }
+
 
 .footer-logo {
-  font-size: 18px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #333;
-  padding: 5px 10px;
-  border-radius: 5px;
+  width: 140px;
+  height: auto;
 }
 
 .footer-links {
   display: flex;
-  gap: 40px;
+  flex-direction: row;
+  gap: 50px;
+  margin-right: 45px;
+  justify-content: start;
+  align-items: start;
+  text-align: left;
 }
 
 .footer-column {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
 }
 
 .footer-column h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #333;
+  color: #fff;
   margin-bottom: 10px;
+  
 }
 
 .footer-column a {
   font-size: 14px;
-  color: #666;
+  color: #fff;
   text-decoration: none;
 }
 
