--- a/styles/LevelPage.module.css
+++ b/styles/LevelPage.module.css
@@ -4,7 +4,7 @@
   background-image: linear-gradient(#fff8df 1px, transparent 1px),
                     linear-gradient(#fff8df, #e0e0e0 1px, transparent 1px);
   background-size: 20px 20px; /* Grid size */
-  padding: 40px 20px;
+  padding: 20px 40px;
   min-height: 60vh; /* Full viewport height */
   display: flex;
   flex-direction: column;
@@ -12,12 +12,12 @@
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
-  max-width: 1200px; /* Limit the width on large screens */
-  margin-bottom: 40px;
+  max-width: 1200px; /* Match the table-container width */
+  display: flex;
+  justify-content: flex-end; /* Align the button to the right */
+  gap: 20px;
+  margin-bottom: 30px;
 }
 
 .section-title {
@@ -30,16 +30,18 @@
 .test-button {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 15px;
   height: 50px;
-  gap: 5px;
   padding: 10px 20px;
   background-color: #94E951; /* Green background */
   color: #656565;
   text-decoration: none;
   border-radius: 18px;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 500;
   transition: background-color 0.3s ease;
+  margin-top: 20px;
 }
 
 .test-button span {
@@ -57,6 +59,8 @@
 }
 
 .begin-the-test {
+  margin-top: 5px;
+  font-size: 16px;
   color: #fff;
 }
 
@@ -79,7 +83,7 @@
 
 .level-table th,
 .level-table td {
-  padding: 20px 15px;
+  padding: 25px 15px;
   text-align: center;
   font-size: 14px;
   color: #333;
@@ -118,9 +122,11 @@
   }
 
   .header {
-    flex-direction: row;
+    max-width: 100%; /* Full width on mobile */
+    justify-content: flex-end; /* Keep the button on the right */
     gap: 15px;
     margin-bottom: 20px;
+    padding-right: 10px; /* Add some padding to avoid edge overlap */
   }
 
   .section-title {
@@ -144,7 +150,7 @@
 
   .level-table th,
   .level-table td {
-    padding: 10px;
+    padding: 20px 10px;
     font-size: 12px;
   }
 
