--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -92,7 +92,6 @@
 
   .footer-bottom {
     flex-direction: column;
-    align-items: center;
     gap: 20px;
   }
 
@@ -103,7 +102,7 @@
   .footer-links {
     flex-direction: column;
     gap: 20px;
-    text-align: center;
+    align-items: start;
   }
 
   .footer-column h4 {
